Changelog
=========


1.10.3 (unreleased)
-------------------

- Nothing changed yet.


1.10.2 (2014-11-19)
-------------------

- Exclude uninstalled products from upgrades view.
  [jone]

- Make upgrades appear in undo form again.
  The transaction note fix in 1.7.4 caused upgrade transaction to not appear in the undo form.
  [jone]


1.10.1 (2014-10-27)
-------------------

- Update upgrade view ordering for root nodes.
  The dependency graph does not define any order for root
  profiles (e.g. included in buildout directly), which causes
  random sorting in the upgrade view for those profiles.
  This change sorts those root profiles by name without changing
  the order of profiles which is depended on.
  [jone]


1.10.0 (2014-08-28)
-------------------

- Wrap step.objects in a SavepointIterator that creates a savepoint every n items.
  [lgraf]


1.9.0 (2014-08-27)
------------------

- Add @@manage-upgrades-plain fallback view for @@manage-upgrades.
  It does not include plone`s main template and thus might be able to render when
  the default view fails for some reason.
  [deiferni]


1.8.0 (2014-08-11)
------------------

- Prevent portal_quickinstaller from picking upgrade-steps instead of the
  default-profile by prefixing the profile-id with 'upgrade_to_' (fix #45)
  [pbauer]

- Flag profiles whose filesystem version is outdated.
  Highlights profiles with upgrades that lead to a destination version that is
  higher than the corresponding profile's current filesystem version.
  This usually means someone forgot to update the version in metadata.xml of the
  corresponding profile.
  [lgraf]


1.7.4 (2014-05-12)
------------------

- Extend workflow updater to migrate workflow history.
  [jone]

- Fix workflow updater to always update objects.
  The objects are updated even when it seems that the object was
  not update or has no longer a workflow.
  This fixes issues when updating a workflow, in which case the